--- a/docker/nginx/conf.d/default.conf
+++ b/docker/nginx/conf.d/default.conf
@@ -9,14 +9,6 @@ server {
         index  index.php index.html;
     }
 
-    # location / {
-    #     return 301 https://example.org$request_uri;
-    # }
-
-    location /.well-known/acme-challenge/ {
-        root /var/www/certbot;
-    }
-
     error_page   500 502 503 504  /50x.html;
     location = /50x.html {
         root   /usr/share/nginx/html;
@@ -24,38 +16,9 @@ server {
 
     location ~ \.php$ {
         root           /var/www/html;
-        fastcgi_pass   php:9000;
+        fastcgi_pass   ventscript_php:9000;
         fastcgi_index  index.php;
         fastcgi_param  SCRIPT_FILENAME $document_root$fastcgi_script_name;
         include        fastcgi_params;
     }
 }
-
-# server {
-#     listen 443 default_server ssl http2;
-#     listen [::]:443 ssl http2;
-
-#     server_name ovchie.space www.ovchie.space;
-
-#     ssl_certificate /etc/nginx/ssl/live/example.org/fullchain.pem;
-#     ssl_certificate_key /etc/nginx/ssl/live/example.org/privkey.pem;
-
-#     location / {
-#         root   /var/www/html;
-#         index  index.php index.html;
-#     }
-
-#     location ~ \.php$ {
-#         root           /var/www/html;
-#         fastcgi_pass   php:9000;
-#         fastcgi_index  index.php;
-#         fastcgi_param  SCRIPT_FILENAME $document_root$fastcgi_script_name;
-#         include        fastcgi_params;
-#     }
-
-#     error_page   500 502 503 504  /50x.html;
-#     location = /50x.html {
-#         root   /usr/share/nginx/html;
-#     }
-# }
-
