--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,21 @@ version: "3"
 
 services:
   ventscript_php:
-    image: php:8.1.18-fpm
+    build:
+      context: .
+      dockerfile: ./docker/php/Dockerfile
+    expose:
+      - 9000
     volumes:
       - "./src:/var/www/html"
-      - "./docker/volumes/composer:/var/www/"
+      - "./docker/php/composer.json:/var/www/composer.json"
+      - "./docker/php/composer.lock:/var/www/composer.lock"
+      - ./docker/php/docker-php-ext-xdebug.ini:/usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
+    networks:
+      - internal
+    environment:
+      XDEBUG_MODE: debug
+      XDEBUG_CONFIG: client_host=host.docker.internal client_port=9003
 
   ventscript_nginx:
     image: nginx:latest
@@ -15,3 +26,11 @@ services:
     volumes:
       - "./src:/var/www/html"
       - "./docker/nginx/conf.d:/etc/nginx/conf.d"
+    depends_on:
+      - ventscript_php
+    networks:
+      - internal
+
+networks:
+  internal:
+    driver: bridge
