--- a/docker/nginx/conf.d/default.conf
+++ b/docker/nginx/conf.d/default.conf
@@ -4,14 +4,20 @@ server {
     server_name ovchie.space www.ovchie.space;
     server_tokens off;
 
-    location / {
-        root   /var/www/html;
-        index  index.php index.html;
+    location ~ \.(jpg|jpeg|gif|png|ico|css|zip|tgz|gz|rar|bz2|doc|xls|exe|pdf|ppt|txt|tar|mid|midi|wav|bmp|rtf|js)$ {
+        root /var/www/html;
     }
 
-    error_page   500 502 503 504  /50x.html;
-    location = /50x.html {
-        root   /usr/share/nginx/html;
+    location / {
+        try_files $uri $uri/ @mod_rewrite;
+    }
+
+    location @mod_rewrite {
+        rewrite ^/(.*)$ /index.php?$1 last;
+    }
+
+    location ~ /\. {
+        deny all;
     }
 
     location ~ \.php$ {
