--- a/docker/php/composer.json
+++ b/docker/php/composer.json
@@ -13,5 +13,7 @@
             "email": "ov4innikovsa@yandex.ru"
         }
     ],
-    "require": {}
+    "require": {
+        "php": "^8.1"
+    }
 }
