--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,11 @@ services:
     build:
       context: .
       dockerfile: ./docker/php/Dockerfile
+    user: 1000:1000 
     expose:
       - 9000
     volumes:
-      - "./src:/var/www/html"
+      - "./src:/var/www/html:rw"
       - "./docker/php/composer.json:/var/www/html/composer.json"
       - "./docker/php/composer.lock:/var/www/html/composer.lock"
       - ./docker/php/docker-php-ext-xdebug.ini:/usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
