--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -15,7 +15,9 @@ RUN curl -sSLf \
 
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 
-RUN usermod -u 1000 www-data && groupmod -g 1000 www-data
+RUN deluser www-data || true && \
+    addgroup -g 1000 www-data && \
+    adduser -u 1000 -G www-data -H -D -S www-data
 RUN chown -R www-data:www-data /var/www/html
 
 WORKDIR /var/www/html
